# game-engine-lib

./: Cargo.toml
src/: error.rs  lib.rs  window_manager.rs
src/material/: mod.rs  texture.rs
src/objects/: instance.rs
src/resources/: load.rs
src/state_manager/: mod.rs  state.rs
