[package]
name = "game-engine-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytemuck = {version = "1.25.0", features = ["derive"]}
image = {version = "0.25.10", features = ["png", "jpeg"], default-features = false}
log = "0.4.30"
pollster = "0.4.0"
texture = "0.1.0"
thiserror = "2.0.18"
tobj = {version = "4.0.3", features = ["async", "futures", "tokio"]}
wgpu = "29.0.3"
winit = "0.30.13"
